--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   mongodb:
-    image: mongo:7.0.5
+    #    image: mongo:7.0.5
+    image: "docker.pkg.github.com/nailik2018/no-blog/mongo:7.0.5"
     container_name: mongodb
     ports:
       - "27017:27017"
