--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,21 +3,21 @@ name: Build and Publish Docker Image
 on:
   push:
     branches:
-      - develop
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Login to GitHub Packages
-      run: echo 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 | docker login docker.pkg.github.com -u Nailik2018 --password-stdin
+      - name: Login to GitHub Packages
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
-    - name: Build the Docker image
-      run: docker build -t docker.pkg.github.com/no-blog/mongo:7.0.5 .
+      - name: Build the Docker image
+        run: docker build -t docker.pkg.github.com/${{ github.repository }}/mongo:7.0.5 .
 
-    - name: Push the Docker image to GitHub Packages
-      run: docker push docker.pkg.github.com/no-blog/mongo:7.0.5
+      - name: Push the Docker image to GitHub Packages
+        run: docker push docker.pkg.github.com/${{ github.repository }}/mongo:7.0.5
